--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -46,4 +46,6 @@ test:
   script:
     - "pnpm config set store-dir $CI_PROJECT_DIR/.pnpm-store"
     - "pnpm install --frozen-lockfile"
+    - "pnpm run lint"
     - "pnpm run test"
+    - "pnpm run build"
