--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "main": "index.js",
   "scripts": {
     "dev": "tsx watch src/server.ts",
-    "build": "tsc src/index.ts --outDir dist",
-    "start": "NODE_ENV=production node dist/index.js",
+    "build": "tsc -p tsconfig.json",
+    "start": "NODE_ENV=production node dist/server.js",
     "test": "vitest",
-    "db:generate": "drizzle-kit generate"
+    "lint": "eslint",
+    "db:generate": "drizzle-kit generate",
+    "clean": "rm -rf node_modules dist"
   },
   "keywords": [],
   "author": "",
@@ -19,7 +21,7 @@
     "@electric-sql/pglite": "^0.3.15",
     "@elysiajs/node": "^1.4.4",
     "@elysiajs/openapi": "^1.4.14",
-    "@sinclair/typebox": "^0.34.48",
+    "@sinclair/typebox": "^0.34.40",
     "@types/node": "^24.10.13",
     "drizzle-orm": "^0.45.1",
     "drizzle-typebox": "^0.3.3",
@@ -27,9 +29,14 @@
     "openapi-types": "^12.1.3"
   },
   "devDependencies": {
+    "@eslint/js": "^10.0.1",
     "drizzle-kit": "^0.31.9",
+    "eslint": "^10.0.0",
+    "globals": "^17.3.0",
+    "jiti": "^2.6.1",
     "tsx": "^4.21.0",
     "typescript": "^5.9.3",
+    "typescript-eslint": "^8.56.0",
     "vitest": "^4.0.18"
   },
   "pnpm": {
