--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "tsx watch src/server.ts",
+    "start:basic": "EXPORT BASIC_API=true && tsx watch src/server.ts",
+    "start:auth": "tsx watch src/server.ts",
     "build": "tsc -p tsconfig.json",
     "start": "NODE_ENV=production node dist/server.js",
     "test": "vitest",
@@ -19,13 +20,18 @@
   "packageManager": "pnpm@10.26.2",
   "dependencies": {
     "@electric-sql/pglite": "^0.3.15",
+    "@elysiajs/bearer": "^1.4.3",
     "@elysiajs/node": "^1.4.4",
     "@elysiajs/openapi": "^1.4.14",
-    "@sinclair/typebox": "^0.34.40",
+    "@sinclair/typebox": "0.34.48",
+    "@types/bcrypt": "^6.0.0",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.10.13",
+    "bcrypt": "^6.0.0",
     "drizzle-orm": "^0.45.1",
     "drizzle-typebox": "^0.3.3",
     "elysia": "^1.4.25",
+    "jsonwebtoken": "^9.0.3",
     "openapi-types": "^12.1.3"
   },
   "devDependencies": {
@@ -38,10 +44,5 @@
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.56.0",
     "vitest": "^4.0.18"
-  },
-  "pnpm": {
-    "overrides": {
-      "@sinclair/typebox": "0.34.48"
-    }
   }
 }
