--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -71,10 +71,10 @@ openapi:
     - "pnpm install --frozen-lockfile"
     - "pnpm run generate:openapi"
     - "cd $CI_PROJECT_DIR/__openapi__/angular-client"
-    - "pnpm install --frozen-lockfile"
+    - "pnpm install"
     - "pnpm run build"
     - "cd $CI_PROJECT_DIR/__openapi__/fetch-client"
-    - "pnpm install --frozen-lockfile"
+    - "pnpm install"
     - "pnpm run build"
   artifacts:
     paths:
