--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -61,7 +61,13 @@ openapi:
     docker:
       user: develop
   stage: openapi
-  dependencies: ['test']
+  rules:
+    - if: $CI_PIPELINE_SOURCE == "schedule"
+      when: always
+    - when: manual
+      allow_failure: true
+  needs:
+    - test
   cache:
     key: ${CI_COMMIT_REF_SLUG}
     paths:
@@ -79,3 +85,21 @@ openapi:
   artifacts:
     paths:
       - '__openapi__'
+
+publish:
+  image:
+    name: $CI_REGISTRY/training/bulletin-backend/bulletin-backend-build
+    docker:
+      user: develop
+  stage: openapi
+  rules:
+    - when: manual
+      allow_failure: true
+  needs:
+    - openapi
+  script:
+    - "pnpm config set //${env.CI_SERVER_HOST}/api/v4/projects/170/packages/npm/:_authToken=${env.CI_JOB_TOKEN}"
+    - "cd $CI_PROJECT_DIR/__openapi__/angular-client/dist"
+    - "pnpm publish --tag beta"
+    - "cd $CI_PROJECT_DIR/__openapi__/fetch-client"
+    - "pnpm publish --tag beta"
