--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -98,7 +98,7 @@ publish:
   needs:
     - openapi
   script:
-    - "pnpm config set //${env.CI_SERVER_HOST}/api/v4/projects/170/packages/npm/:_authToken=${env.CI_JOB_TOKEN}"
+    - "pnpm config set //$CI_SERVER_HOST/api/v4/projects/170/packages/npm/:_authToken=$CI_JOB_TOKEN"
     - "cd $CI_PROJECT_DIR/__openapi__/angular-client/dist"
     - "pnpm publish --tag beta"
     - "cd $CI_PROJECT_DIR/__openapi__/fetch-client"
