--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start:basic": "EXPORT BASIC_API=true && tsx watch src/server.ts",
-    "start:auth": "tsx watch src/server.ts",
+    "dev:basic": "BASIC_API=true tsx watch src/server.ts",
+    "dev:auth": "tsx watch src/server.ts",
     "build": "tsc -p tsconfig.json",
     "start": "NODE_ENV=production node dist/server.js",
     "test": "vitest",
     "lint": "eslint",
     "generate:db": "drizzle-kit generate",
-    "generate:openapi": "openapi-generator-cli generate",
+    "generate:open": "openapi-generator-cli generate",
     "clean": "rm -rf node_modules dist"
   },
   "keywords": [],
