--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "license": "ISC",
   "packageManager": "pnpm@10.29.3",
   "dependencies": {
+    "@bogeychan/elysia-logger": "^0.1.10",
     "@electric-sql/pglite": "^0.3.15",
     "@elysiajs/bearer": "^1.4.3",
     "@elysiajs/node": "^1.4.4",
@@ -33,7 +34,8 @@
     "drizzle-typebox": "^0.3.3",
     "elysia": "^1.4.25",
     "jsonwebtoken": "^9.0.3",
-    "openapi-types": "^12.1.3"
+    "openapi-types": "^12.1.3",
+    "pino-pretty": "^13.1.3"
   },
   "devDependencies": {
     "@eslint/js": "^10.0.1",
